[package]
name = "lambda"
version = "0.1.0"
authors = ["max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]


[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git"}
simple-error = "0.1.9"
serde_derive = "1.0.112"
serde = "1.0.112"
simple_logger = "1.6.0"
log = "0.4.8"
serde_json = "1.0"
tokio = { version = "0.2.4", features = ["full"] }